# simple-rag-qa

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: database.py  embeddings.py  main.py  models.py
